--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "each-async": "^1.1.1",
     "grunt": "~0.4.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-nodeunit": "^0.4.1",
     "proxyquire": "^1.3.0"
   },
   "dependencies": {
+    "each-async": "^1.1.1",
     "bower": ">=1.0.0",
     "chalk": "^0.5.1",
-    "google-cdn": "^1.0.0"
+    "google-cdn": "git://github.com/ruiaraujo/google-cdn.git#mybabies"
   },
   "repository": {
     "type": "git",
